Fix a flaky browser test for parallel download.

ParallelDownloadResumption is flaky previously, the cause is an edge
case bug in download resumption with a prallel download, that first
hole can be filled before creating parallel requests.

The impact of this bug is very small. Repro rate in browser test is
only 1-2%, and resumption only happens for 4.9% for all downloads.

Bug: 762763
Change-Id: I00efbc14ec40f484f3ef111f8237894c4009ba6d
Reviewed-on: https://chromium-review.googlesource.com/653314
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501127}