content/browser/download/mock_download_item_impl.cc
@@ -7,9 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace content {
 
-MockDownloadItemImpl::MockDownloadItemImpl(
-    DownloadItemImplDelegate* delegate,
-    const DownloadItem::ReceivedSlices& received_slices)
+MockDownloadItemImpl::MockDownloadItemImpl(DownloadItemImplDelegate* delegate)
     : DownloadItemImpl(delegate,
                        std::string("7d122682-55b5-4a47-a253-36cadc3e5bee"),
                        content::DownloadItem::kInvalidId,
@@ -35,11 +33,8 @@ MockDownloadItemImpl::MockDownloadItemImpl(
                        false,
                        base::Time(),
                        true,
-                       received_slices,
+                       DownloadItem::ReceivedSlices(),
                        net::NetLogWithSource()) {}
-
-MockDownloadItemImpl::MockDownloadItemImpl(DownloadItemImplDelegate* delegate)
-    : MockDownloadItemImpl(delegate, DownloadItem::ReceivedSlices()) {}
 
 MockDownloadItemImpl::~MockDownloadItemImpl() = default;
 
